Modernized look with css

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,37 +1,22 @@
-<h1>Burgers!</h1>
 
-
-{{!-- <h2>TEST - ALL BURGERS</h2>
-<ul>
-  {{#each burger}} 
-    {{> burgers/burger-block}} 
-  {{/each}}
-</ul> --}}
-
+<div id="logo">
+  <img src="static/assets/images/burgerLogo.jpg" alt="" class="logo">
+</div>
 
 <h2>Burgers that are not eaten!</h2>
-
-<ul>
-  {{#each burger}} 
-    {{#unless devoured}} 
-      {{> burgers/burger-block}} 
-    {{/unless}} 
-  {{/each}}
-</ul>
-
+<div class="not-eaten-box">
+{{#each burger}} {{#unless devoured}} {{> burgers/burger-block}} {{/unless}} {{/each}}
+</div>
+<br><hr>
 <h2>Burgers that are eaten!</h2>
+<div class="eaten-box">
+{{#each burger}} {{#if devoured}} {{> burgers/burger-block}} {{/if}} {{/each}}
+</div>
 
-<ul>
-  {{#each burger}} 
-    {{#if devoured}} 
-      {{> burgers/burger-block}} 
-    {{/if}} 
-  {{/each}}
-</ul>
 
-<h2>Add a Burger</h2>
 <form class="create-form">
-
+  <hr>
+  <h2>Add a Burger</h2>
   <div class="form-group">
     <label for="nameinput">Burger Name:</label>
     <input type="text" id="nameinput" name="name">
