--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="static/assets/css/style.css" type="text/css" />
-		<title>Burgertime!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		{{!-- <script src="../../public/assets/js/bugerDOM.js"></script> --}}
+	<link rel="stylesheet" href="static/assets/css/style.css" type="text/css" />
+	<title>Burgertime!</title>
+	<script src="https://code.jquery.com/jquery.js"></script> {{!--
+	<script src="../../public/assets/js/bugerDOM.js"></script> --}}
 
-		<script src="static/assets/js/burgerDOM.js"></script>
-	</head>
-	<body>
+	<script src="static/assets/js/burgerDOM.js"></script>
+</head>
+
+<body>
+	<div id="mainContent">
 		{{{ body }}}
-	</body>
+	</div>
+
+</body>
+
 </html>
