--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,8 +1,4 @@
-li {
-  padding: 5px;
-  margin: 5px;
-  background: #faebd7;
-}
+
 
 .label {
   font-weight: bold;
@@ -12,6 +8,53 @@ li {
   padding: 5px;
   margin: 5px;
   background: aqua;
+}
+
+.card{
+  padding: 5px;
+  margin: 5px;
+  background: #ecc99c;
+  width: 125px;
+  height: 75px;
+  float: left;
+  border-style: solid;
+  border-width: 2px;
+  overflow: auto;
+  opacity: 1.0;
+  font-size: 20px;
+}
+
+body{
+  background-image: url("../images/dinerbackground.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+#mainContent{
+ width: 80%;
+ background-color: beige;
+ opacity: .90;
+ padding: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.not-eaten-box{
+  overflow: auto;
+  width: 100%;
+  
+}
+.eaten-box{
+  overflow: auto;
+  width: 100%;
+}
+
+.logo{
+  height: 200px;
+  width: 200px;
+  position: block;
+  border-radius: 160px;
 }
 
 .form-group {
